--- a/Runpay.UserIdentification.API/appsettings.json
+++ b/Runpay.UserIdentification.API/appsettings.json
@@ -5,5 +5,67 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "NLog": {
+    "internalLogLevel": "Info",
+    "internalLogFile": "c:\\temp\\internal-nlog-AspNetCore.txt",
+    "extensions": [
+      { "assembly": "NLog.Web.AspNetCore" }
+    ],
+    "targets": {
+      "file": {
+        "type": "File",
+        "fileName": "C:/Logs/Runpay.UserIdentification.API/Runpay.UserIdentification.API_TEST_JSON_${shortdate}_${processid}.log",
+        "layout": "${longdate} [${threadid}] ${uppercase:${level}} | ${message}"
+      },
+      "MailWarn": {
+        "type": "Mail",
+        "smtpServer": "mail.webmoney.eu",
+        "smtpPort": "25",
+        "smtpAuthentication": "Basic",
+        "smtpUserName": "report@webmoney.lv",
+        "smtpPassword": "hb3yGGa8",
+        "enableSsl": "false",
+        "from": "report@webmoney.lv",
+        "to": "v.vorobjev@hq.runpay.com",
+        "html": "true",
+        "subject": "Runpay.UserIdentification.API Warning",
+        "body": "${message} ${exception:format=tostring}",
+        "timeout": "10000"
+      },
+      "MailError": {
+        "type": "Mail",
+        "smtpServer": "mail.webmoney.eu",
+        "smtpPort": "25",
+        "smtpAuthentication": "Basic",
+        "smtpUserName": "report@webmoney.lv",
+        "smtpPassword": "hb3yGGa8",
+        "enableSsl": "false",
+        "from": "report@webmoney.lv",
+        "to": "v.vorobjev@hq.runpay.com",
+        "html": "true",
+        "subject": "Runpay.UserIdentification.API Error",
+        "body": "${message} ${exception:format=tostring}",
+        "timeout": "10000"
+      }
+    },
+    "rules": [
+      {
+        "logger": "*",
+        "minLevel": "Trace",
+        "writeTo": "File"
+      },
+      {
+        "logger": "*",
+        "minLevel": "Warn",
+        "writeTo": "MailWarn"
+      },
+      {
+        "logger": "*",
+        "minLevel": "Error",
+        "writeTo": "MailError"
+      }
+    ]
+  }
+
 }
