first way for done task

--- a/Runpay.UserIdentification.API/appsettings.json
+++ b/Runpay.UserIdentification.API/appsettings.json
@@ -5,8 +5,28 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "NLog": {
+
+  "ConnectionStrings": {
+    "PaymentsConnectionString": "data source=d-db01.netto-pro.local;Integrated Security=SSPI;initial catalog=payments;application name=UserIdentification;packet size=4096;persist security info=True;workstation id=vmenkov;;Max Pool Size=500; Connection Lifetime=10; Pooling=false;TrustServerCertificate=True;"
+  },
+
+  "TerminalApiOptions": {
+    "Url": "https://127.0.0.1:5003/"
+  },
+
+  "SignatureOptions": {
+    "ValidateSignature": false,
+    "PublicCertPath": "C:/certs/pablic.cer"
+  },
+
+  "ELKOptions": {
+    "SendEnabled": true,
+    "URL": "http://192.168.13.180:8080",
+    "Login": "user1",
+    "Password": "AbUrbJBz9EJSgWXT"
+  },
+
+  "NLogOptions": {
     "internalLogLevel": "Info",
     "internalLogFile": "c:\\temp\\internal-nlog-AspNetCore.txt",
     "extensions": [
