--- a/Runpay.UserIdentification.API/Runpay.UserIdentification.API.csproj
+++ b/Runpay.UserIdentification.API/Runpay.UserIdentification.API.csproj
@@ -10,8 +10,18 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1" />
 		<PackageReference Include="NLog.Web.AspNetCore" Version="5.3.11" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\Runpay.UserIdentification.BisinessLogic\Runpay.UserIdentification.BisinessLogic.csproj" />
+	  <ProjectReference Include="..\Runpay.UserIdentification.DataAccess\Runpay.UserIdentification.DataAccess.csproj" />
+	  <ProjectReference Include="..\Runpay.UserIdentification.Domain\Runpay.UserIdentification.Domain.csproj" />
 	</ItemGroup>
 
 </Project>
