--- a/Runpay.UserIdentification.API/appsettings.json
+++ b/Runpay.UserIdentification.API/appsettings.json
@@ -7,16 +7,22 @@
   },
 
   "ConnectionStrings": {
-    "PaymentsConnectionString": "data source=d-db01.netto-pro.local;Integrated Security=SSPI;initial catalog=payments;application name=UserIdentification;packet size=4096;persist security info=True;workstation id=vmenkov;;Max Pool Size=500; Connection Lifetime=10; Pooling=false;TrustServerCertificate=True;"
+    "PaymentsConnectionString": "data source=d-db01.netto-pro.local;Integrated Security=SSPI;initial catalog=payments;application name=UserIdentification;packet size=4096;persist security info=True;workstation id=vmenkov;;Max Pool Size=500; Connection Lifetime=10; Pooling=false;TrustServerCertificate=True;",
+    "IdentifyDocConnectionString": "Data Source=D-DB01.netto-pro.local;Initial catalog=IdentifyDoc;Application name=UserIdentification; Integrated Security=SSPI;persist security info=False;TrustServerCertificate=True;packet size=4096;Max Pool Size=500; Connection Lifetime=10; Pooling=false;"
   },
 
   "TerminalApiOptions": {
     "Url": "https://127.0.0.1:5003/"
   },
 
+  "ApiOptions": {
+    "PosCode": "WMTP01"
+  },
+
   "SignatureOptions": {
     "ValidateSignature": false,
-    "PublicCertPath": "C:/certs/pablic.cer"
+    "PublicCertPath": "C:/certs/pablic.cer",
+    "SecretKey": "SecretKey"
   },
 
   "ELKOptions": {
