--- a/Runpay.UserIdentification.Domain/Runpay.UserIdentification.Domain.csproj
+++ b/Runpay.UserIdentification.Domain/Runpay.UserIdentification.Domain.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="GateWayHelpers" Version="1.0.8" />
     <PackageReference Include="LocalizationHelper" Version="1.0.6" />
     <PackageReference Include="TA.Protocol" Version="1.0.46" />
   </ItemGroup>
